# task_manager

./: CMakeLists.txt  tasks.json
src/: main.cpp
src/cli/: tm_cli.cpp  tm_cli.hpp
src/tasks/: task.cpp  task.hpp
